feat: adding spectral, more rules
